[package]
name = "graph_canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "console",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlSelectElement",
    "DomRect",
    "DragEvent",
    "DragEventInit",
    "Event",
    "EventListener",
    "EventTarget",
    "ResizeObserver",
    "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "*"
anyhow = "*"

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js",
]
