[package]
name = "graph_canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
js = ["dep:serde", "dep:tsify", "dep:serde-wasm-bindgen"]

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "DomRect",
    "DragEvent",
    "DragEventInit",
    "Event",
    "EventListener",
    "EventTarget",
    "NodeList",
    "ResizeObserver",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "*"
anyhow = "*"
# Optional dependencies for JS support
serde = { version = "1.0", features = ["derive"], optional = true }
tsify = { version = "*", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
derivative = "2"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js",
]
